--- a/src/view/viewHome.fxml
+++ b/src/view/viewHome.fxml
@@ -19,7 +19,7 @@
 			</image>
 		</ImageView>
 		<Label layoutX="26.0" layoutY="171.0" text="Time"
-			AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="171.0">
+			AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="171.0">
 			<font>
 				<Font name="Arial Bold" size="24.0" />
 			</font>
@@ -31,7 +31,7 @@
 			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
 			text="Off" AnchorPane.topAnchor="171.0" />
 		<Label layoutX="26.0" layoutY="271.0" text="News"
-			AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="271.0">
+			AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="271.0">
 			<font>
 				<Font name="Arial Bold" size="24.0" />
 			</font>
@@ -43,7 +43,7 @@
 			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
 			text="Off" AnchorPane.topAnchor="271.0" />
 		<Label layoutX="26.0" layoutY="371.0" text="Weather"
-			AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="371.0">
+			AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="371.0">
 			<font>
 				<Font name="Arial Bold" size="24.0" />
 			</font>
@@ -91,5 +91,16 @@
 			prefWidth="91.0" text="Scan" />
 		<Label fx:id="message" layoutX="23.0" layoutY="537.0"
 			prefHeight="17.0" prefWidth="311.0" />
+		<CheckBox fx:id="override" layoutX="403.0" layoutY="77.0"
+			mnemonicParsing="false" onAction="#handleOverride" text="Manual" />
+		<TextField fx:id="ipInput" layoutX="109.0" layoutY="39.0"
+			prefHeight="27.0" prefWidth="275.0" promptText="Enter a Valid IP Address (192.168.1.1)"
+			visible="false" />
+		<Separator layoutX="25.0" layoutY="203.0" prefHeight="7.0"
+			prefWidth="470.0" AnchorPane.leftAnchor="25.0" />
+		<Separator layoutX="25.0" layoutY="305.0" prefHeight="7.0"
+			prefWidth="470.0" AnchorPane.leftAnchor="25.0" />
+		<Separator layoutX="25.0" layoutY="405.0" prefHeight="7.0"
+			prefWidth="470.0" />
 	</children>
 </AnchorPane>
