--- a/src/view/viewHome2.fxml
+++ b/src/view/viewHome2.fxml
@@ -24,36 +24,27 @@
 				<Font name="Arial Bold" size="24.0" />
 			</font>
 		</Label>
-		<ToggleButton fx:id="timeOn" layoutX="406.0" layoutY="171.0"
+		<ToggleButton fx:id="timeOn" layoutX="450.0" layoutY="171.0"
 			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
-			selected="true" text="On" AnchorPane.topAnchor="171.0" />
-		<ToggleButton fx:id="timeOff" layoutX="450.0" layoutY="171.0"
-			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
-			text="Off" AnchorPane.topAnchor="171.0" />
+			text="On" AnchorPane.topAnchor="171.0" />
 		<Label layoutX="26.0" layoutY="271.0" text="News"
 			AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="271.0">
 			<font>
 				<Font name="Arial Bold" size="24.0" />
 			</font>
 		</Label>
-		<ToggleButton fx:id="newsOn" layoutX="408.0" layoutY="271.0"
+		<ToggleButton fx:id="newsOn" layoutX="452.0" layoutY="271.0"
 			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
-			selected="true" text="On" AnchorPane.topAnchor="271.0" />
-		<ToggleButton fx:id="newsOff" layoutX="452.0" layoutY="271.0"
-			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
-			text="Off" AnchorPane.topAnchor="271.0" />
+			text="On" AnchorPane.topAnchor="271.0" />
 		<Label layoutX="26.0" layoutY="371.0" text="Weather"
 			AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="371.0">
 			<font>
 				<Font name="Arial Bold" size="24.0" />
 			</font>
 		</Label>
-		<ToggleButton fx:id="weatherOn" layoutX="408.0" layoutY="371.0"
+		<ToggleButton fx:id="weatherOn" layoutX="452.0" layoutY="371.0"
 			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
-			selected="true" text="On" AnchorPane.topAnchor="371.0" />
-		<ToggleButton fx:id="weatherOff" layoutX="452.0" layoutY="371.0"
-			mnemonicParsing="false" onAction="#handleToggle" prefWidth="40.0"
-			text="Off" AnchorPane.topAnchor="371.0" />
+			text="On" AnchorPane.topAnchor="371.0" />
 		<ImageView fx:id="Weather" fitHeight="86.0" fitWidth="86.0"
 			layoutX="828.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true">
 			<image>
